# DPG-semestral-project

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  readme.md
bat/: readme.md  run1.bat  run2.bat  run3.bat
data/: readme.md
doc/: readme.md
pres/: presentation1.pptx  presentation2.pptx  readme.md
report/: readme.md
report/LaTeX/: Makefile  rec.tex  reportdpg.tex
src/: basic-glut.cpp  main.cpp  scene.cpp  scene.h
src/cell/: Cell.cpp  Cell.h
src/color/: Color.cpp  Color.h
src/context/: Context.cpp  Context.h
src/heightmap/: Grid.cpp  Grid.h  GridIntersection.cpp  GridIntersection.h  HeightMap.cpp  HeightMap.h
src/heightmap-reader/: HeightMapReader.cpp  HeightMapReader.h
src/heightmap/cell/: Cell.cpp  Cell.h
src/heightmap/heightmap-reader/: HeightMapReader.h  MapReader.cpp  MapReader.h
src/helper-types/: HasIntersection.h  Intersection.h  Viewport.cpp  Viewport.h
src/illumination/: Illumination.cpp  Illumination.h
src/light/: Light.cpp  Light.h
src/material/: Material.cpp  Material.h
src/matrix/: Matrix4d.cpp  Matrix4d.h
src/point/: Point2d.cpp  Point2d.h  Point2i.cpp  Point2i.h  Point3d.cpp  Point3d.h
src/rational/: Rational.cpp  Rational.h
src/ray/: Ray.cpp  Ray.h
src/raytracing/: RayTracing.cpp  RayTracing.h
src/transform-stack/: TransformStack.cpp  TransformStack.h
src/triangle/: Triangle.cpp  Triangle.h
src/vector/: Vector3d.cpp  Vector3d.h  Vector4d.cpp  Vector4d.h
